Week-4 Container Orchestration/day-09-capstone/shortlink/30-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: shortlink
  labels: { app: api }
spec:
  replicas: 2
  selector: { matchLabels: { app: api } }
  template:
    metadata: { labels: { app: api } }
    spec:
      containers:
        - name: api
          image: stefanprodan/podinfo:6.14.0
          ports:
            - containerPort: 9898
          livenessProbe:
            httpGet: { path: /healthz, port: 9898 }
          readinessProbe:
            httpGet: { path: /readyz, port: 9898 }
          resources:
            requests: { cpu: 100m, memory: 64Mi }
            limits:   { cpu: 500m, memory: 128Mi }
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: shortlink
spec:
  selector: { app: api }
  ports:
    - port: 80
      targetPort: 9898
