Week-4 Container Orchestration/day-09-capstone/shortlink/40-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: shortlink
  labels: { app: frontend }
spec:
  replicas: 2
  selector: { matchLabels: { app: frontend } }
  template:
    metadata: { labels: { app: frontend } }
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap: { name: frontend-html }
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: shortlink
spec:
  selector: { app: frontend }
  ports:
    - port: 80
      targetPort: 80
